--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
         </article>
     </header>
     <main>
-        <section>
+        <section class="category">
             <div class="threeImages">
                 <p>NEWS</p>
-                <img src="" alt="">
+                <img src="/img/category/category1.png" alt="Mikrofon">
             </div>
             <div class="threeImages">
                 <p>ALBUM</p>
-                <img src="" alt="">
+                <img src="/img/category/category2.png" alt="Album">
             </div>
             <div class="threeImages">
                 <p>STORE</p>
-                <img src="" alt="">
+                <img src="/img/category/category3.png" alt="TShirt">
             </div>
         </section>
         <section class="slogan">
@@ -50,6 +50,20 @@
             <img class="video" src="/img/video/bottom.png" alt="Video">
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer">
+            <p class="footerText">SUBSCRIBE & FOLLOW TO GET <br> UPDATES FROM MOUNTAIN!</p>
+            <div>
+                <div class="footerRight">
+                    <img src="img/footer/Facebook.png" alt="facebook">
+                    <img src="img/footer/ins.png" alt="Instagram">
+                    <img src="img/footer/twitter.png" alt="Twitter">
+                    <div class="underRight">
+                        <input type="text">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
